cmake_minimum_required(VERSION 3.2)
# set(CMAKE_BUILD_TYPE Release)
project(MyRayTracer LANGUAGES CXX)
set(output_dir "${CMAKE_BUILD_TYPE}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}")
set(VULKAN_SDK $ENV{VULKAN_SDK})
string(REPLACE "\\" "/" VULKAN_SDK ${VULKAN_SDK})
set(VULKAN_SDK_INCLUDE ${VULKAN_SDK}/Include)
set(VULKAN_SDK_LIBDIR ${VULKAN_SDK}/Lib)
set(VULKAN_SDK_LIB ${VULKAN_SDK_LIBDIR}/vulkan-1.lib)
set(GLM_INCLUDE  ${CMAKE_SOURCE_DIR}/Walnut/vendor/glm)
set(IMGUI_INCLUDE ${CMAKE_SOURCE_DIR}/Walnut/vendor/imgui)
set(GLFW_INCLUDE ${CMAKE_SOURCE_DIR}/Walnut/vendor/GLFW/include)
set(STBIMAGE_INCLUDE ${CMAKE_SOURCE_DIR}/Walnut/vendor/stb_image)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Walnut)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/PathTracer)